package com.conceptarena.app.concept;

import com.conceptarena.core.concept.model.ConceptBank;
import java.util.List;

public interface ConceptBankQueryService {
    List<ConceptBank> getAllConceptBanks();
}
